fix scroll on mobile

--- a/src/app/page.module.sass
+++ b/src/app/page.module.sass
@@ -8,20 +8,20 @@
 
 .hero
     height: 300vh
-    width: 100dvw
+    width: 100vw
 
 .item
     position: sticky
     overflow: hidden
     margin: 0 auto
     opacity: 0
-    transform: translateY(100dvh)
+    transform: translateY(100vh)
     clip-path: inset(100% 100% round 40px)
 
 .container
     position: relative
-    width: 100dvw
-    height: 100dvh
+    width: 100vw
+    height: 100vh
     left: 0
     transform-origin: center
 
@@ -29,8 +29,8 @@
         content: ""
         position: absolute
         top: 0
-        width: 100dvw
-        height: 100dvh
+        width: 100vw
+        height: 100%
         z-index: 2
         pointer-events: none
 
@@ -53,7 +53,7 @@
     position: absolute
     z-index: 3
     width: 70%
-    top: 42dvh
+    top: 42vh
     left: 50%
     transform: translateX(-50%)
     display: flex
@@ -72,3 +72,19 @@
         color: #ffebce
         z-index: 3
         max-width: 1140px
+
+@media only screen and (max-width: 768px)
+    .content
+        top: 25vh
+
+        svg
+            margin-bottom: 60px
+        h1
+            font-family: var(--font-accent)
+            font-weight: 200
+            font-size: 32px
+            line-height: 127%
+            text-align: center
+            color: #ffebce
+            z-index: 3
+            max-width: 1140px
